Flask data options

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -1122,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [
     {
@@ -1149,7 +1149,6 @@
        "      <th>userId</th>\n",
        "      <th>movieId</th>\n",
        "      <th>tag</th>\n",
-       "      <th>timestamp</th>\n",
        "      <th>title</th>\n",
        "      <th>genre</th>\n",
        "      <th>rating</th>\n",
@@ -1161,7 +1160,6 @@
        "      <td>2</td>\n",
        "      <td>60756</td>\n",
        "      <td>funny</td>\n",
-       "      <td>1445714994</td>\n",
        "      <td>Step Brothers (2008)</td>\n",
        "      <td>Comedy</td>\n",
        "      <td>5.0</td>\n",
@@ -1171,7 +1169,6 @@
        "      <td>2</td>\n",
        "      <td>60756</td>\n",
        "      <td>Highly quotable</td>\n",
-       "      <td>1445714996</td>\n",
        "      <td>Step Brothers (2008)</td>\n",
        "      <td>Comedy</td>\n",
        "      <td>5.0</td>\n",
@@ -1181,7 +1178,6 @@
        "      <td>2</td>\n",
        "      <td>60756</td>\n",
        "      <td>will ferrell</td>\n",
-       "      <td>1445714992</td>\n",
        "      <td>Step Brothers (2008)</td>\n",
        "      <td>Comedy</td>\n",
        "      <td>5.0</td>\n",
@@ -1191,7 +1187,6 @@
        "      <td>2</td>\n",
        "      <td>89774</td>\n",
        "      <td>Boxing story</td>\n",
-       "      <td>1445715207</td>\n",
        "      <td>Warrior (2011)</td>\n",
        "      <td>Drama</td>\n",
        "      <td>5.0</td>\n",
@@ -1201,7 +1196,6 @@
        "      <td>2</td>\n",
        "      <td>89774</td>\n",
        "      <td>MMA</td>\n",
-       "      <td>1445715200</td>\n",
        "      <td>Warrior (2011)</td>\n",
        "      <td>Drama</td>\n",
        "      <td>5.0</td>\n",
@@ -1211,7 +1205,6 @@
        "      <td>2</td>\n",
        "      <td>89774</td>\n",
        "      <td>Tom Hardy</td>\n",
-       "      <td>1445715205</td>\n",
        "      <td>Warrior (2011)</td>\n",
        "      <td>Drama</td>\n",
        "      <td>5.0</td>\n",
@@ -1221,7 +1214,6 @@
        "      <td>2</td>\n",
        "      <td>106782</td>\n",
        "      <td>drugs</td>\n",
-       "      <td>1445715054</td>\n",
        "      <td>Wolf of Wall Street, The (2013)</td>\n",
        "      <td>Comedy</td>\n",
        "      <td>5.0</td>\n",
@@ -1231,7 +1223,6 @@
        "      <td>2</td>\n",
        "      <td>106782</td>\n",
        "      <td>Leonardo DiCaprio</td>\n",
-       "      <td>1445715051</td>\n",
        "      <td>Wolf of Wall Street, The (2013)</td>\n",
        "      <td>Comedy</td>\n",
        "      <td>5.0</td>\n",
@@ -1241,7 +1232,6 @@
        "      <td>2</td>\n",
        "      <td>106782</td>\n",
        "      <td>Martin Scorsese</td>\n",
-       "      <td>1445715056</td>\n",
        "      <td>Wolf of Wall Street, The (2013)</td>\n",
        "      <td>Comedy</td>\n",
        "      <td>5.0</td>\n",
@@ -1251,7 +1241,6 @@
        "      <td>7</td>\n",
        "      <td>48516</td>\n",
        "      <td>way too long</td>\n",
-       "      <td>1169687325</td>\n",
        "      <td>Departed, The (2006)</td>\n",
        "      <td>Crime</td>\n",
        "      <td>1.0</td>\n",
@@ -1261,7 +1250,6 @@
        "      <td>18</td>\n",
        "      <td>431</td>\n",
        "      <td>Al Pacino</td>\n",
-       "      <td>1462138765</td>\n",
        "      <td>Carlito's Way (1993)</td>\n",
        "      <td>Crime</td>\n",
        "      <td>4.0</td>\n",
@@ -1271,7 +1259,6 @@
        "      <td>18</td>\n",
        "      <td>431</td>\n",
        "      <td>gangster</td>\n",
-       "      <td>1462138749</td>\n",
        "      <td>Carlito's Way (1993)</td>\n",
        "      <td>Crime</td>\n",
        "      <td>4.0</td>\n",
@@ -1281,7 +1268,6 @@
        "      <td>18</td>\n",
        "      <td>431</td>\n",
        "      <td>mafia</td>\n",
-       "      <td>1462138755</td>\n",
        "      <td>Carlito's Way (1993)</td>\n",
        "      <td>Crime</td>\n",
        "      <td>4.0</td>\n",
@@ -1291,7 +1277,6 @@
        "      <td>18</td>\n",
        "      <td>1221</td>\n",
        "      <td>Al Pacino</td>\n",
-       "      <td>1461699306</td>\n",
        "      <td>Godfather: Part II, The (1974)</td>\n",
        "      <td>Crime</td>\n",
        "      <td>5.0</td>\n",
@@ -1301,7 +1286,6 @@
        "      <td>18</td>\n",
        "      <td>1221</td>\n",
        "      <td>Mafia</td>\n",
-       "      <td>1461699303</td>\n",
        "      <td>Godfather: Part II, The (1974)</td>\n",
        "      <td>Crime</td>\n",
        "      <td>5.0</td>\n",
@@ -1311,7 +1295,6 @@
        "      <td>18</td>\n",
        "      <td>5995</td>\n",
        "      <td>holocaust</td>\n",
-       "      <td>1455735472</td>\n",
        "      <td>Pianist, The (2002)</td>\n",
        "      <td>Drama</td>\n",
        "      <td>4.5</td>\n",
@@ -1321,7 +1304,6 @@
        "      <td>18</td>\n",
        "      <td>5995</td>\n",
        "      <td>true story</td>\n",
-       "      <td>1455735479</td>\n",
        "      <td>Pianist, The (2002)</td>\n",
        "      <td>Drama</td>\n",
        "      <td>4.5</td>\n",
@@ -1331,7 +1313,6 @@
        "      <td>18</td>\n",
        "      <td>44665</td>\n",
        "      <td>twist ending</td>\n",
-       "      <td>1456948283</td>\n",
        "      <td>Lucky Number Slevin (2006)</td>\n",
        "      <td>Crime</td>\n",
        "      <td>4.5</td>\n",
@@ -1341,7 +1322,6 @@
        "      <td>18</td>\n",
        "      <td>52604</td>\n",
        "      <td>Anthony Hopkins</td>\n",
-       "      <td>1457650696</td>\n",
        "      <td>Fracture (2007)</td>\n",
        "      <td>Crime</td>\n",
        "      <td>4.5</td>\n",
@@ -1351,7 +1331,6 @@
        "      <td>18</td>\n",
        "      <td>52604</td>\n",
        "      <td>courtroom drama</td>\n",
-       "      <td>1457650711</td>\n",
        "      <td>Fracture (2007)</td>\n",
        "      <td>Crime</td>\n",
        "      <td>4.5</td>\n",
@@ -1361,7 +1340,6 @@
        "      <td>18</td>\n",
        "      <td>52604</td>\n",
        "      <td>twist ending</td>\n",
-       "      <td>1457650682</td>\n",
        "      <td>Fracture (2007)</td>\n",
        "      <td>Crime</td>\n",
        "      <td>4.5</td>\n",
@@ -1371,7 +1349,6 @@
        "      <td>18</td>\n",
        "      <td>88094</td>\n",
        "      <td>britpop</td>\n",
-       "      <td>1457444500</td>\n",
        "      <td>Upside Down: The Creation Records Story (2010)</td>\n",
        "      <td>Documentary</td>\n",
        "      <td>3.0</td>\n",
@@ -1381,7 +1358,6 @@
        "      <td>18</td>\n",
        "      <td>88094</td>\n",
        "      <td>indie record label</td>\n",
-       "      <td>1457444592</td>\n",
        "      <td>Upside Down: The Creation Records Story (2010)</td>\n",
        "      <td>Documentary</td>\n",
        "      <td>3.0</td>\n",
@@ -1391,7 +1367,6 @@
        "      <td>18</td>\n",
        "      <td>88094</td>\n",
        "      <td>music</td>\n",
-       "      <td>1457444609</td>\n",
        "      <td>Upside Down: The Creation Records Story (2010)</td>\n",
        "      <td>Documentary</td>\n",
        "      <td>3.0</td>\n",
@@ -1401,7 +1376,6 @@
        "      <td>18</td>\n",
        "      <td>144210</td>\n",
        "      <td>dumpster diving</td>\n",
-       "      <td>1455060381</td>\n",
        "      <td>Just Eat It: A Food Waste Story (2014)</td>\n",
        "      <td>Documentary</td>\n",
        "      <td>4.0</td>\n",
@@ -1411,32 +1385,32 @@
        "</div>"
       ],
       "text/plain": [
-       "    userId  movieId                 tag   timestamp  \\\n",
-       "0        2    60756               funny  1445714994   \n",
-       "1        2    60756     Highly quotable  1445714996   \n",
-       "2        2    60756        will ferrell  1445714992   \n",
-       "3        2    89774        Boxing story  1445715207   \n",
-       "4        2    89774                 MMA  1445715200   \n",
-       "5        2    89774           Tom Hardy  1445715205   \n",
-       "6        2   106782               drugs  1445715054   \n",
-       "7        2   106782   Leonardo DiCaprio  1445715051   \n",
-       "8        2   106782     Martin Scorsese  1445715056   \n",
-       "9        7    48516        way too long  1169687325   \n",
-       "10      18      431           Al Pacino  1462138765   \n",
-       "11      18      431            gangster  1462138749   \n",
-       "12      18      431               mafia  1462138755   \n",
-       "13      18     1221           Al Pacino  1461699306   \n",
-       "14      18     1221               Mafia  1461699303   \n",
-       "15      18     5995           holocaust  1455735472   \n",
-       "16      18     5995          true story  1455735479   \n",
-       "17      18    44665        twist ending  1456948283   \n",
-       "18      18    52604     Anthony Hopkins  1457650696   \n",
-       "19      18    52604     courtroom drama  1457650711   \n",
-       "20      18    52604        twist ending  1457650682   \n",
-       "21      18    88094             britpop  1457444500   \n",
-       "22      18    88094  indie record label  1457444592   \n",
-       "23      18    88094               music  1457444609   \n",
-       "24      18   144210     dumpster diving  1455060381   \n",
+       "    userId  movieId                 tag  \\\n",
+       "0        2    60756               funny   \n",
+       "1        2    60756     Highly quotable   \n",
+       "2        2    60756        will ferrell   \n",
+       "3        2    89774        Boxing story   \n",
+       "4        2    89774                 MMA   \n",
+       "5        2    89774           Tom Hardy   \n",
+       "6        2   106782               drugs   \n",
+       "7        2   106782   Leonardo DiCaprio   \n",
+       "8        2   106782     Martin Scorsese   \n",
+       "9        7    48516        way too long   \n",
+       "10      18      431           Al Pacino   \n",
+       "11      18      431            gangster   \n",
+       "12      18      431               mafia   \n",
+       "13      18     1221           Al Pacino   \n",
+       "14      18     1221               Mafia   \n",
+       "15      18     5995           holocaust   \n",
+       "16      18     5995          true story   \n",
+       "17      18    44665        twist ending   \n",
+       "18      18    52604     Anthony Hopkins   \n",
+       "19      18    52604     courtroom drama   \n",
+       "20      18    52604        twist ending   \n",
+       "21      18    88094             britpop   \n",
+       "22      18    88094  indie record label   \n",
+       "23      18    88094               music   \n",
+       "24      18   144210     dumpster diving   \n",
        "\n",
        "                                             title        genre rating  \n",
        "0                             Step Brothers (2008)       Comedy    5.0  \n",
@@ -1466,7 +1440,7 @@
        "24          Just Eat It: A Food Waste Story (2014)  Documentary    4.0  "
       ]
      },
-     "execution_count": 244,
+     "execution_count": 256,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1481,8 +1455,9 @@
     "    rating = ratings_df.loc[((ratings_df[\"userId\"]==user) & (ratings_df[\"movieId\"]==movie)), \"rating\"] \n",
     "    if not rating.empty:\n",
     "        tags_movies_ratings.loc[tags_movies_ratings.index[j], \"rating\"] = rating.item()\n",
-    "    \n",
-    "tags_movies_ratings.head(25)"
+    "\n",
+    "tmr_df = tags_movies_ratings.drop(columns=\"timestamp\")    \n",
+    "tmr_df.head(25)"
    ]
   },
   {
@@ -1527,7 +1502,7 @@
     }
    ],
    "source": [
-    "mtr_num = pd.get_dummies(tags_movies_ratings)\n",
+    "mtr_num = pd.get_dummies(tmr_df)\n",
     "columns = mtr_num.columns\n",
     "columns[-25:]"
    ]
