fixed sqlite query

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
        "4        5  113041  11862.0"
       ]
      },
-     "execution_count": 238,
+     "execution_count": 258,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "4                                       Comedy  "
       ]
      },
-     "execution_count": 239,
+     "execution_count": 259,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
        "24       1      441     4.0  964980868"
       ]
      },
-     "execution_count": 240,
+     "execution_count": 260,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +609,7 @@
        "4       2    89774              MMA  1445715200"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 261,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +750,7 @@
        "[100 rows x 2 columns]"
       ]
      },
-     "execution_count": 242,
+     "execution_count": 262,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [
     {
@@ -1099,7 +1099,7 @@
        "24          Just Eat It: A Food Waste Story (2014)  Documentary  "
       ]
      },
-     "execution_count": 243,
+     "execution_count": 263,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1122,9 +1122,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3683\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1440,7 +1447,7 @@
        "24          Just Eat It: A Food Waste Story (2014)  Documentary    4.0  "
       ]
      },
-     "execution_count": 256,
+     "execution_count": 264,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1457,12 +1464,13 @@
     "        tags_movies_ratings.loc[tags_movies_ratings.index[j], \"rating\"] = rating.item()\n",
     "\n",
     "tmr_df = tags_movies_ratings.drop(columns=\"timestamp\")    \n",
+    "print(len(tmr_df))\n",
     "tmr_df.head(25)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1481,7 +1489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
@@ -1496,7 +1504,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 246,
+     "execution_count": 266,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1509,7 +1517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1522,7 +1530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1531,7 +1539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1540,7 +1548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [
     {
