--- a/analysis2.ipynb
+++ b/analysis2.ipynb
@@ -752,8 +752,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# preprocess agg of tags\n",
+    "tags_df_agg = tags_df.groupby('movieId')['tag'].agg(lambda x: ','.join(x)).reset_index()\n",
+    "# merge movies_df with tags_df_agg\n",
+    "df_temp = pd.merge(movies_trimmed,tags_df_agg, on='movieId', how='left')\n",
+    "# extracting year out of the title and making a new column with it\n",
+    "df_temp['Year'] = df_temp['title'].str.extract(r'\\((\\d{4})\\)')\n",
+    "# movie agg on users\n",
+    "ratings_df['userId'] = ratings_df['userId'].astype('str')\n",
+    "ratings_df['movieId'] = ratings_df['movieId'].astype('str')\n",
+    "ratings_df_user_agg = ratings_df.groupby('movieId')['userId'].agg(lambda x: ','.join(x)).reset_index()\n",
+    "#ratings_df_rate_agg = ratings_df.groupby('movieId')['rating'].agg(lambda x: ','.join(x)).reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# all of it, the big dataframe\n",
-    "# combine df on movie ID, starting with "
+    "# combine df on movie ID, starting with the"
    ]
   },
   {
@@ -1077,7 +1096,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# keras tuner ig\n"
+    "# keras tuner ig\n",
+    "import tensorflow as tf\n"
    ]
   }
  ],
