--- a/movie_ML.ipynb
+++ b/movie_ML.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,25 +11,20 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "from sklearn.neighbors import NearestNeighbors\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import random\n",
+    "from joblib import Parallel, delayed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Connect to the SQLite database\n",
-    "conn = sqlite3.connect('movie_ratings_db.sqlite')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "conn = sqlite3.connect('movie_ratings_db.sqlite')\n",
+    "\n",
     "# Query the data from the ratings table and join with the movies table\n",
     "query = \"\"\"\n",
     "    SELECT r.userId, r.movieId, r.rating, m.title, m.genres\n",
@@ -41,53 +36,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   userId  movieId  rating                        title  \\\n",
-      "0       1        1     4.0             Toy Story (1995)   \n",
-      "1       1        3     4.0      Grumpier Old Men (1995)   \n",
-      "2       1        6     4.0                  Heat (1995)   \n",
-      "3       1       47     5.0  Seven (a.k.a. Se7en) (1995)   \n",
-      "4       1       50     5.0   Usual Suspects, The (1995)   \n",
-      "\n",
-      "                                              genres  \n",
-      "0  [Adventure, Animation, Children, Comedy, Fantasy]  \n",
-      "1                                  [Comedy, Romance]  \n",
-      "2                          [Action, Crime, Thriller]  \n",
-      "3                                [Mystery, Thriller]  \n",
-      "4                         [Crime, Mystery, Thriller]  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Assuming the genres column is in the format \"Genre1|Genre2|Genre3\"\n",
     "# Convert genres into a list\n",
-    "df['genres'] = df['genres'].str.split('|')\n",
-    "\n",
-    "# Display the processed dataframe\n",
-    "print(df.head())\n"
+    "df['genres'] = df['genres'].str.split('|')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Content-Based Filtering (using Genres)\n",
     "df['genres_str'] = df['genres'].apply(lambda x: ' '.join(x))\n",
     "tfidf_vectorizer = TfidfVectorizer(stop_words='english')\n",
-    "tfidf_matrix = tfidf_vectorizer.fit_transform(df['genres_str'])"
+    "tfidf_matrix = tfidf_vectorizer.fit_transform(df['genres_str'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +71,7 @@
        "NearestNeighbors(metric='cosine')"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +84,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Collaborative Filtering (User-Item Interactions)\n",
+    "user_movie_ratings = df.pivot_table(index='userId', columns='title', values='rating')\n",
+    "user_movie_ratings = user_movie_ratings.fillna(0)\n",
+    "movie_user_ratings = user_movie_ratings.T\n",
+    "movie_similarity = cosine_similarity(movie_user_ratings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,41 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Similar movies (Nearest Neighbors) for Toy Story (1995):\n",
-      "['Toy Story 2 (1999)', 'Monsters, Inc. (2001)', 'Toy Story (1995)', 'Toy Story (1995)', 'Toy Story (1995)']\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Example: Get similar movies for a given movie index\n",
-    "movie_index = 0  # Replace with the actual movie index\n",
-    "similar_movies_nn = get_similar_items_nn(movie_index)\n",
-    "print(f'Similar movies (Nearest Neighbors) for {df.iloc[movie_index][\"title\"]}:\\n{similar_movies_nn}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Collaborative Filtering (User-Item Interactions)\n",
-    "user_movie_ratings = df.pivot_table(index='userId', columns='title', values='rating')\n",
-    "user_movie_ratings = user_movie_ratings.fillna(0)\n",
-    "movie_user_ratings = user_movie_ratings.T\n",
-    "movie_similarity = cosine_similarity(movie_user_ratings)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,54 +130,95 @@
     "    # Sort by similarity and get the top N\n",
     "    similar_movies_df = similar_movies_df.sort_values(by='similarity', ascending=False).head(top_n)\n",
     "    \n",
-    "    return similar_movies_df['movie'].tolist()\n",
-    "\n"
+    "    return similar_movies_df['movie'].tolist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Function to get hybrid recommendations (combining CF and CB)\n",
-    "def get_hybrid_recommendations(movie_title, top_n=5):\n",
-    "    # Get similar movies using collaborative filtering\n",
-    "    cf_recommendations = get_similar_items_cf(movie_title, top_n=top_n)\n",
+    "def get_hybrid_recommendations(selected_movies, top_n=5):\n",
+    "    # Get similar movies using collaborative filtering for each selected movie\n",
+    "    cf_recommendations = Parallel(n_jobs=-1)(delayed(get_similar_items_cf)(movie_title, top_n=top_n) for movie_title in selected_movies)\n",
+    "    cf_recommendations = [item for sublist in cf_recommendations for item in sublist]\n",
     "    \n",
     "    # Get similar movies using content-based filtering with genre filter\n",
-    "    movie_index = df[df['title'] == movie_title].index[0]\n",
-    "    cb_recommendations = get_similar_items_nn(movie_index)\n",
+    "    cb_recommendations = Parallel(n_jobs=-1)(delayed(get_similar_items_nn)(df[df['title'] == movie_title].index[0]) for movie_title in selected_movies)\n",
+    "    cb_recommendations = [item for sublist in cb_recommendations for item in sublist]\n",
     "    \n",
     "    # Filter content-based recommendations based on genre relevance\n",
-    "    genre_filter = df[df['title'] == movie_title]['genres'].values[0]\n",
-    "    cb_recommendations_filtered = [movie for movie in cb_recommendations if any(genre in df[df['title'] == movie]['genres'].values[0] for genre in genre_filter)]\n",
-    "    \n",
+    "    genre_filter = set().union(*(tuple(genre) for movie_title in selected_movies for genre in df[df['title'] == movie_title]['genres']))\n",
+    "    cb_recommendations_filtered = [movie for movie in cb_recommendations if any(set(genre) & genre_filter for genre in df[df['title'] == movie]['genres'])]\n",
+    "\n",
     "    # Combine the recommendations from both methods\n",
     "    hybrid_recommendations = list(set(cf_recommendations + cb_recommendations_filtered))[:top_n]\n",
     "    \n",
-    "    return hybrid_recommendations\n"
+    "    return hybrid_recommendations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to allow the user to choose movies from a random list\n",
+    "def choose_movies():\n",
+    "    # Get a list of 10 random movies\n",
+    "    random_movies = random.sample(df['title'].tolist(), 10)\n",
+    "    \n",
+    "    print(\"Choose up to 5 movies from the list:\")\n",
+    "    selected_movies = []\n",
+    "    count = 0\n",
+    "    while count < 5:\n",
+    "        print(f\"{count + 1}. {random_movies[count]}\")\n",
+    "        choice = input(\"Enter 'yes' if you like this movie or 'no' if you don't: \").lower()\n",
+    "        if choice == 'yes':\n",
+    "            selected_movies.append(random_movies[count])\n",
+    "            count += 1\n",
+    "        elif choice == 'no':\n",
+    "            # Choose a different movie randomly\n",
+    "            random_movies.pop(count)\n",
+    "            random_movies.append(random.choice(df['title'].tolist()))\n",
+    "        elif choice != 'no':\n",
+    "            print(\"Invalid choice. Please enter 'yes' or 'no'.\")\n",
+    "    return selected_movies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Your recommendations based off Toy Story (1995):\n",
-      "['Toy Story 2 (1999)', 'Monsters, Inc. (2001)', 'Earth Girls Are Easy (1988)', 'SpaceCamp (1986)', 'Woman in Red, The (1984)']\n"
+      "Choose up to 5 movies from the list:\n",
+      "1. Made in America (1993)\n",
+      "1. Babe (1995)\n",
+      "1. Dirty Dozen, The (1967)\n",
+      "1. Into the Wild (2007)\n",
+      "2. Legend No. 17 (2013)\n",
+      "2. Cats & Dogs (2001)\n",
+      "3. Memento (2000)\n",
+      "4. Scarface (1983)\n",
+      "4. Sexy Beast (2000)\n",
+      "4. Addams Family Values (1993)\n",
+      "5. Pitch Perfect 2 (2015)\n",
+      "Hybrid recommendations based on user-selected movies:\n",
+      "['Woman in Red, The (1984)', 'Seven (a.k.a. Se7en) (1995)', 'Flintstones, The (1994)', 'Secret of My Succe$s, The (a.k.a. The Secret of My Success) (1987)', 'Earth Girls Are Easy (1988)']\n"
      ]
     }
    ],
    "source": [
-    "# Example: Get hybrid recommendations for a given movie title\n",
-    "movie_title = \"Toy Story (1995)\"  # Replace with the actual movie title\n",
-    "hybrid_recommendations = get_hybrid_recommendations(movie_title, top_n=5)\n",
-    "print(f'Your recommendations based off {movie_title}:\\n{hybrid_recommendations}')\n"
+    "# Example: Get user-selected movies and generate recommendations\n",
+    "selected_movies = choose_movies()\n",
+    "hybrid_recommendations = get_hybrid_recommendations(selected_movies, top_n=5)\n",
+    "print(f'Hybrid recommendations based on user-selected movies:\\n{hybrid_recommendations}')"
    ]
   }
  ],
