--- a/movie_ML.ipynb
+++ b/movie_ML.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "NearestNeighbors(metric='cosine')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -198,17 +198,19 @@
      "output_type": "stream",
      "text": [
       "Choose up to 5 movies from the list:\n",
-      "1. World Is Not Enough, The (1999)\n"
+      "1. Blue Valentine (2010)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2. My Life Without Me (2003)\n",
-      "3. Twelve Monkeys (a.k.a. 12 Monkeys) (1995)\n",
-      "4. Flintstones, The (1994)\n",
-      "5. Aladdin (1992)\n"
+      "2. What Women Want (2000)\n",
+      "3. Goodfellas (1990)\n",
+      "4. Appleseed (Appurushîdo) (2004)\n",
+      "5. Live Free or Die Hard (2007)\n",
+      "Hybrid recommendations based on user-selected movies:\n",
+      "['Casablanca (1942)', 'Wedding Planner, The (2001)', 'Appleseed (Appurushîdo) (2004)', 'Good Night, and Good Luck. (2005)', 'Au Hasard Balthazar (1966)']\n"
      ]
     }
    ],
