--- a/worse_than_coin.ipynb
+++ b/worse_than_coin.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From n:\\Python3.11.4\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# import our dependencies\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -29,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,16 +52,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movieId</th>\n",
+       "      <th>title</th>\n",
+       "      <th>(no genres listed)</th>\n",
+       "      <th>Action</th>\n",
+       "      <th>Adventure</th>\n",
+       "      <th>Animation</th>\n",
+       "      <th>Children</th>\n",
+       "      <th>Comedy</th>\n",
+       "      <th>Crime</th>\n",
+       "      <th>Documentary</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Film-Noir</th>\n",
+       "      <th>Horror</th>\n",
+       "      <th>IMAX</th>\n",
+       "      <th>Musical</th>\n",
+       "      <th>Mystery</th>\n",
+       "      <th>Romance</th>\n",
+       "      <th>Sci-Fi</th>\n",
+       "      <th>Thriller</th>\n",
+       "      <th>War</th>\n",
+       "      <th>Western</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Toy Story (1995)</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Jumanji (1995)</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Grumpier Old Men (1995)</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   movieId                    title  (no genres listed)  Action  Adventure  \\\n",
+       "0        1         Toy Story (1995)                   0       0          1   \n",
+       "1        2           Jumanji (1995)                   0       0          1   \n",
+       "2        3  Grumpier Old Men (1995)                   0       0          0   \n",
+       "\n",
+       "   Animation  Children  Comedy  Crime  Documentary  ...  Film-Noir  Horror  \\\n",
+       "0          1         1       1      0            0  ...          0       0   \n",
+       "1          0         1       0      0            0  ...          0       0   \n",
+       "2          0         0       1      0            0  ...          0       0   \n",
+       "\n",
+       "   IMAX  Musical  Mystery  Romance  Sci-Fi  Thriller  War  Western  \n",
+       "0     0        0        0        0       0         0    0        0  \n",
+       "1     0        0        0        0       0         0    0        0  \n",
+       "2     0        0        0        1       0         0    0        0  \n",
+       "\n",
+       "[3 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# i want retain all the associated genre's per movie\n",
     "# lets try a get_dummies split, and then concatenate as a categorical\n",
     "genres_split = movies_df['genres'].str.get_dummies('|')\n",
     "movies_encoded = pd.concat([movies_df, genres_split], axis=1)\n",
     "# drop original genres column\n",
-    "movies_encoded.drop('genres', axis=1, inplace=True)"
+    "movies_encoded.drop('genres', axis=1, inplace=True)\n",
+    "movies_encoded.columns\n",
+    "movies_encoded.head(3)"
    ]
   },
   {
@@ -302,7 +459,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
