--- a/matrix_coin.ipynb
+++ b/matrix_coin.ipynb
@@ -1371,6 +1371,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['kmeans_model.joblib']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.cluster import KMeans\n",
+    "from joblib import dump\n",
+    "\n",
+    "# Assuming `trained_movie_embeddings` contains trained movie embeddings\n",
+    "# Train the KMeans model\n",
+    "kmeans = KMeans(n_clusters=10, random_state=42).fit(trained_movie_embeddings)\n",
+    "\n",
+    "# Save the trained KMeans model to a file\n",
+    "dump(kmeans, 'kmeans_model.joblib')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [
